# nlptask

./: .gitignore  pyproject.toml
classify/review-analyze-bert/: config.py  dataset.py  predict.py  process.py
review-analyze/: config.py  predict.py
review-analyze-bert/: dataset.py  evaluate.py  model.py  predict.py  process.py  train.py
review-analyze/review-analyze-bert/: model.py
review-analyze/review-analyze-gru/: model.py
translation-attention/: config.py  model.py  predict.py  process.py  tokenizer.py  train.py
translation-seq2seq/: model.py  predict.py  train.py
translation-transformer/: config.py  dataset.py  tokenizer.py  train.py
translation-union/: config.py  dataset.py  evaluate.py  predict.py  process.py  tokenizer.py  train.py
translation-union/cfg/: gru.yml  transformer.yml
translation-union/model/: __init__.py  gru.py  transformer.py
