[project]
name = "nlptask"
version = "0.1.0"
description = "nlptask_learn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.19.2",
]
